# pictoroute

./: .gitignore  Dockerfile  README.md  build_and_run_dockerfile.sh  docs.md  package-lock.json  package.json  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  api.js  index.css  index.js
frontend/src/components/: AddressList.js  ImageUpload.js  ShortestPath.js  Spinner.js
pictoroute/: main.py
pictoroute/core/: __init__.py  genai.py  get_coordinates.py  image_processing.py  route_planning.py
pictoroute/models/: address.py  shortest_path.py
pictoroute/routers/: api.py
